# aozora-flavored-markdown

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE-MIT  NOTICE  README.ja.md  README.md  SECURITY.md  _typos.toml  bacon.toml  cliff.toml  clippy.toml  deny.toml  dist-workspace.toml  docker-compose.yml  lefthook.yml  mise.toml  rust-toolchain.toml  rustfmt.toml
.devcontainer/: devcontainer.json
crates/afm-cli/: Cargo.toml
crates/afm-cli/src/: main.rs
crates/afm-cli/tests/: cli_integration.rs
crates/afm-corpus/: Cargo.toml
crates/afm-corpus/src/: error.rs  filesystem.rs  in_memory.rs  lib.rs  vendored.rs
crates/afm-encoding/: Cargo.toml
crates/afm-encoding/src/: gaiji.rs  lib.rs
crates/afm-lexer/: Cargo.toml
crates/afm-lexer/src/: diagnostic.rs  lib.rs  phase0_sanitize.rs  phase1_events.rs  phase2_pair.rs  phase3_classify.rs  phase4_normalize.rs  phase5_registry.rs  phase6_validate.rs  token.rs
crates/afm-markdown/: Cargo.toml
crates/afm-markdown-test-support/: Cargo.toml
crates/afm-markdown-test-support/src/: lib.rs
crates/afm-markdown/benches/: render_to_string.rs  splice.rs
crates/afm-markdown/examples/: ast-walk.rs  dhat_render.rs  latency_hist.rs  render-sjis.rs  render-utf8.rs  samply_render.rs  serialize-round-trip.rs
crates/afm-markdown/fuzz/: Cargo.toml
crates/afm-markdown/fuzz/fuzz_targets/: parse_render.rs  serialize_round_trip.rs  sjis_decode.rs
crates/afm-markdown/src/: ast_splice.rs  code_block_mask.rs  html.rs  ir.rs  lib.rs  post_process.rs  post_process_legacy.rs  sentinel_stream.rs  sentinels.rs  source_line_anchors.rs  test_support.rs
crates/afm-markdown/src/ir/: mod.rs  projection.rs  types.rs
crates/afm-markdown/tests/: aozora_parity.rs  block_structure_interaction.rs  commonmark_spec.rs  css_class_contract.rs  deep_nesting.rs  fuzz_regressions.rs  gfm_spec.rs  heading_promotion.rs  html_well_formed.rs  ir_aozora.rs  ir_coverage.rs  paired_container.rs  post_process_invariants.proptest-regressions  post_process_invariants.rs  property_gfm_aozora_mix.rs  property_heading_integrity.rs  property_html_shape.proptest-regressions  property_html_shape.rs  snapshot_splice.rs  source_line_anchors.rs  streaming_blocks.rs
crates/afm-markdown/tests/fuzz_regressions/: README.md
crates/afm-markdown/tests/snapshots/: snapshot_splice__block_page_break.snap  snapshot_splice__inline_ruby.snap  snapshot_splice__plain.snap  snapshot_splice__unknown_annotation.snap
crates/afm-parser/: Cargo.toml
crates/afm-parser/examples/: ast-walk.rs  render-sjis.rs  render-utf8.rs  serialize-round-trip.rs
crates/afm-parser/fuzz/fuzz_targets/: parse_render.rs  serialize_round_trip.rs  sjis_decode.rs
crates/afm-parser/src/: adapter.rs  html.rs  lib.rs  post_process.rs  preparse.rs  serialize.rs  test_support.rs
crates/afm-parser/src/aozora/: annotation.rs  block.rs  bouten.rs  classes.rs  html.rs  inline.rs  layout.rs  mod.rs  ruby.rs  tcy.rs
crates/afm-parser/tests/: aozora_spec.rs  bisect_regression.rs  block_structure_interaction.rs  commonmark_spec.rs  corpus_sweep.rs  css_class_contract.rs  forward_reference_regression.rs  gfm_spec.rs  golden_56656.rs  heading_promotion.rs  html_escape_invariants.rs  html_well_formed.rs  long_paragraph_regression.rs  paired_container.rs  path_parity.rs  post_process_invariants.proptest-regressions  post_process_invariants.rs  property_fixpoint.rs  property_heading_integrity.rs  property_html_shape.rs  property_ruby.rs  property_xss_prevention.rs  ruby_segments.rs
crates/afm-parser/tests/common/: mod.rs
crates/afm-syntax/: Cargo.toml
crates/afm-syntax/src/: accent.rs  extension.rs  lib.rs
crates/afm-test-utils/: Cargo.toml
crates/afm-test-utils/src/: config.rs  generators.rs  lib.rs
crates/afm-wasm/: Cargo.toml
crates/afm-wasm/src/: lib.rs
crates/afm-wasm/tests/: native_smoke.rs
crates/afm-wasm/types/: afm_types.d.ts
crates/aozora-flavored-markdown/: Cargo.toml
crates/aozora-flavored-markdown-epub/: Cargo.toml
crates/aozora-flavored-markdown-epub-cli/: Cargo.toml
crates/aozora-flavored-markdown-epub-cli/src/: main.rs
crates/aozora-flavored-markdown-epub/assets/: aozora-md-vertical.css
crates/aozora-flavored-markdown-epub/src/: compose.rs  discover.rs  error.rs  lib.rs  package.rs  render.rs
crates/aozora-flavored-markdown-epub/tests/common/: mod.rs
crates/aozora-flavored-markdown-test-support/: Cargo.toml
crates/aozora-flavored-markdown-test-support/src/: lib.rs
crates/aozora-flavored-markdown-wasm/: Cargo.toml
crates/aozora-flavored-markdown-wasm/src/: lib.rs
crates/aozora-flavored-markdown-wasm/tests/: native_smoke.rs
crates/aozora-flavored-markdown-wasm/types/: aozora_flavored_markdown_types.d.ts
crates/aozora-flavored-markdown/benches/: render_to_string.rs  splice.rs
crates/aozora-flavored-markdown/examples/: ast-walk.rs  dhat_render.rs  latency_hist.rs  render-sjis.rs  render-utf8.rs  samply_render.rs  serialize-round-trip.rs
crates/aozora-flavored-markdown/fuzz/: Cargo.toml
crates/aozora-flavored-markdown/fuzz/fuzz_targets/: parse_render.rs  serialize_round_trip.rs  sjis_decode.rs
crates/aozora-flavored-markdown/src/: ast_splice.rs  code_block_mask.rs  diagnostics.rs  html.rs  lib.rs  sentinel_stream.rs  source_line_anchors.rs
crates/aozora-flavored-markdown/src/ir/: mod.rs  projection.rs  types.rs
crates/aozora-flavored-markdown/tests/: aozora_parity.rs  block_structure_interaction.rs  commonmark_spec.rs  css_class_contract.rs  deep_nesting.rs  fuzz_regressions.rs  gfm_spec.rs  heading_promotion.rs  html_well_formed.rs  ir_aozora.rs  ir_coverage.rs  literal_context_sentinels.rs  paired_container.rs  post_process_invariants.rs  property_gfm_aozora_mix.rs  property_heading_integrity.rs  property_html_shape.proptest-regressions  property_html_shape.rs  snapshot_splice.rs  source_line_anchors.rs  streaming_blocks.rs
crates/aozora-flavored-markdown/tests/fuzz_regressions/: README.md
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs  spec_refresh.rs  types.rs
(+154 files in other folders)
