[workspace]
resolver = "3"
members = [
    "crates/afm-syntax",
    "crates/afm-parser",
    "crates/afm-encoding",
    "crates/afm-lexer",
    "crates/afm-corpus",
    "crates/afm-cli",
    "crates/xtask",
]
# afm-book is an mdbook site, not a Rust crate, so it is not a workspace member.
# upstream/comrak is managed by xtask and vendored verbatim; it does not participate
# in the workspace build (afm-parser depends on the upstream path directly).
exclude = ["upstream/comrak", "crates/afm-book"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/P4suta/afm"
authors = ["afm contributors"]
readme = "README.md"
keywords = ["markdown", "aozora", "japanese", "typography", "parser"]
categories = ["parser-implementations", "text-processing", "localization"]

[workspace.lints.rust]
# Hard bans — the compiler rejects these rather than warning.
unsafe_code      = "forbid"
# Identifier hygiene: all 日本語 appears as string literals, never as idents.
# Deny rather than warn so the gate cannot be stepped past in a review.
non_ascii_idents = "deny"

# Strong signals that tend to mask real bugs.
missing_debug_implementations = "warn"
missing_copy_implementations  = "warn"
trivial_casts                 = "warn"
trivial_numeric_casts         = "warn"
unused_import_braces          = "warn"
unused_lifetimes              = "warn"
unused_qualifications         = "warn"

# Lifetime / path hygiene — catches over-broad `pub`, implicit lifetimes in
# paths, and `'a: 'b` bounds that the compiler could infer.
unreachable_pub                = "warn"
single_use_lifetimes           = "warn"
elided_lifetimes_in_paths      = "warn"
redundant_lifetimes            = "warn"
explicit_outlives_requirements = "warn"

# Misc quality gates.
let_underscore_drop        = "warn"  # `let _ = ...` silently drops Drop types
keyword_idents_2024        = "warn"  # 2024-edition reserved keywords as idents
variant_size_differences   = "warn"  # large enum variants — push to `Box`
ambiguous_negative_literals = "warn" # `-1.pow(2)` precedence traps

# Dead-code policy: the compiler already `warn`s about unused items, and our
# `cargo clippy -- -D warnings` gate promotes that to an error at CI time. We
# spell it out as `deny` here so the policy is visible in the manifest and
# so a local `cargo build` (which doesn't pass `-D warnings`) still hard-fails
# on unreferenced items — keeps stale recognisers / scaffolding code from
# piling up across refactors.
dead_code = "deny"

# Warn on edition-drift so we catch idioms deprecated by the next edition early.
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.rustdoc]
# Docs are a shipped surface: broken intra-doc links are a defect, not a
# smell. Keep this one `deny`.
broken_intra_doc_links       = "deny"
# Everything else warns so drift shows up in CI without breaking the build
# while docs get fleshed out.
private_intra_doc_links      = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags            = "warn"
invalid_rust_codeblocks      = "warn"
bare_urls                    = "warn"
redundant_explicit_links     = "warn"
unescaped_backticks          = "warn"

[workspace.lints.clippy]
# Opt-in to all three lint groups that mainstream Rust libraries ship with.
# `priority = -1` lets specific carve-outs below override individual lints.
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

# Specific high-value promotions — catch bugs that routinely slip past default
# clippy. Tests are exempted from unwrap/expect/panic via clippy.toml so these
# only bite production code paths.
dbg_macro           = "warn"  # ban forgotten `dbg!` drops
todo                = "warn"  # pair with strict-code grep for issue-ref
unimplemented       = "warn"
clone_on_ref_ptr    = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc     = "warn"
missing_assert_message     = "warn"

# Restriction group — hand-picked lints from clippy::restriction that
# catch concrete bug-source patterns the plain pedantic/nursery groups
# don't cover. The full restriction group is deliberately NOT enabled —
# it contains mutually contradictory lints; each entry here is a
# considered decision.
#
# `print_stdout` / `print_stderr` are NOT in this list because Cargo does
# not allow combining `[lints] workspace = true` with per-crate
# `[lints.clippy]` overrides (rust-lang/cargo#12697). We enforce the
# "no stray println! in lib crates" rule via the strict-code grep gate
# instead (`just strict-code`), which naturally scopes by path and
# satisfies the feedback_no_warning_suppression rule structurally.
str_to_string                    = "warn"  # prefer `.into()` / `String::from`
# `string_to_string` was removed from clippy in favour of `implicit_clone`;
# the latter is already on via `pedantic`.
# `string_slice` was considered and rejected: parser hot paths maintain
# char-boundary invariants on indices by construction. Forcing `.get()` +
# `unwrap_or` at every site would both obscure intent and double code size
# in the tightest loops. Fuzz-testing and integration tests are the right
# tool for validating these invariants, not a lint.
absolute_paths                   = "warn"  # prefer `use`-imported names
allow_attributes_without_reason  = "warn"  # belt-and-braces against strict-code gate
empty_structs_with_brackets      = "warn"
if_then_some_else_none           = "warn"  # prefer `.then_some` / `.then`
let_underscore_must_use          = "warn"  # ignoring `#[must_use]` via `let _ =`
mixed_read_write_in_expression   = "warn"
rest_pat_in_fully_bound_structs  = "warn"
same_name_method                 = "warn"
semicolon_outside_block          = "warn"
try_err                          = "warn"  # prefer `?` over `Err(x)?`
unneeded_field_pattern           = "warn"
verbose_file_reads               = "warn"  # prefer `fs::read` / `fs::read_to_string`
format_push_string               = "warn"  # prefer `write!` / collect
unnecessary_self_imports         = "warn"
assertions_on_result_states      = "warn"  # prefer `.unwrap_err()` / explicit shape
filetype_is_file                 = "warn"
rc_buffer                        = "warn"  # `Rc<String>` → `Rc<str>`, etc.
rc_mutex                         = "warn"  # `Rc<Mutex<_>>` is a smell — threaded vs refcounted mix-up
lossy_float_literal              = "warn"
suspicious_xor_used_as_pow       = "warn"  # `2 ^ 10` is 8, not 1024

# Justified carve-outs. Keep this list short and documented.
module_name_repetitions = "allow" # `afm_syntax::syntax_error` is clearer than fighting this
multiple_crate_versions = "allow" # transitive dep collisions are not our problem
# Public APIs on stubs need these in places; we revisit when crate stabilises.
missing_const_for_fn    = "allow"
# `redundant_pub_crate` (nursery) conflicts with rustc's `unreachable_pub`:
# the former asks `pub(crate)` → `pub` inside private modules, the latter
# asks `pub` → `pub(crate)` when unreachable. We treat `unreachable_pub` as
# the source of truth and silence this one structurally.
redundant_pub_crate     = "allow"

[workspace.dependencies]
# Internal crates
afm-syntax   = { version = "0.1.0", path = "crates/afm-syntax" }
afm-parser   = { version = "0.1.0", path = "crates/afm-parser" }
afm-encoding = { version = "0.1.0", path = "crates/afm-encoding" }
afm-lexer    = { version = "0.1.0", path = "crates/afm-lexer" }
afm-corpus   = { version = "0.1.0", path = "crates/afm-corpus" }

# comrak vendored fork (path, not crates.io).
# Path is relative to the workspace root. `default-features = false` drops the
# comrak CLI (`cli` / `syntect` / `bon`) which we don't consume; afm-cli is our
# own binary, not comrak's.
comrak = { path = "upstream/comrak", default-features = false }

# Error handling — versions verified against crates.io 2026-04-23
thiserror = "2.0.18"
anyhow    = "1.0"
miette    = { version = "7.6.0", features = ["fancy"] }

# Parsing helpers
winnow                = "1.0"
unicode-segmentation  = "1.13"
regex                 = "1.12"

# Serialization / data
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding
encoding_rs = "0.8.35"

# Compile-time hash maps (gaiji UCS lookup table, kaeriten/bouten slugs)
phf = { version = "0.13", features = ["macros"] }

# Filesystem walking — used by afm-corpus to iterate test corpora
walkdir = "2.5"

# Test helpers
tempfile = "3.27"

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4.6.1", features = ["derive", "wrap_help", "env", "color", "cargo"] }

# Testing
insta             = { version = "1.47", features = ["yaml", "json", "filters"] }
proptest          = "1.11"
criterion         = { version = "0.8", features = ["html_reports"] }
pretty_assertions = "1.4.1"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
opt-level     = 3

[profile.bench]
inherits = "release"
strip    = "none"
debug    = 1

[profile.dev]
# Faster incremental for large workspaces with a vendored tree
split-debuginfo = "unpacked"

# Optimise proc-macros/build scripts/most upstream in dev to speed the test cycle
[profile.dev.package."*"]
opt-level = 1
