[workspace]
resolver = "3"
members = [
    "crates/aozora-flavored-markdown",
    "crates/aozora-flavored-markdown-test-support",
    "crates/aozora-flavored-markdown-cli",
    "crates/aozora-flavored-markdown-wasm",
    "crates/xtask",
]
# aozora-flavored-markdown-book (mdbook site) and upstream/comrak (vendored verbatim) are not crates.
exclude = ["upstream/comrak", "crates/aozora-flavored-markdown-book"]

[workspace.package]
version       = "0.4.1"
edition       = "2024"
rust-version  = "1.96.0"
license       = "Apache-2.0 OR MIT"
description   = "Aozora Flavored Markdown: CommonMark/GFM + ķØÆń®║µ¢ćÕ║½Ķ©śµ│Ģ integrated dialect built on the aozora parser"
repository    = "https://github.com/P4suta/aozora-flavored-markdown"
homepage      = "https://p4suta.github.io/aozora-flavored-markdown/"
documentation = "https://p4suta.github.io/aozora-flavored-markdown/api/"
authors       = ["aozora-flavored-markdown contributors"]
readme        = "README.md"
keywords      = ["markdown", "aozora", "japanese", "typography", "parser"]
categories    = ["parser-implementations", "text-processing", "localization"]

[workspace.lints.rust]
unsafe_code      = "forbid"
non_ascii_idents = "deny" # all µŚźµ£¼Ķ¬× is string literals, never identifiers

# Strong signals that tend to mask real bugs.
missing_debug_implementations = "warn"
missing_copy_implementations  = "warn"
trivial_casts                 = "warn"
trivial_numeric_casts         = "warn"
unused_import_braces          = "warn"
unused_lifetimes              = "warn"
unused_qualifications         = "warn"

# Lifetime / path hygiene ŌĆö catches over-broad `pub`, implicit lifetimes in
# paths, and `'a: 'b` bounds that the compiler could infer.
unreachable_pub                = "warn"
single_use_lifetimes           = "warn"
elided_lifetimes_in_paths      = "warn"
redundant_lifetimes            = "warn"
explicit_outlives_requirements = "warn"

# Misc quality gates.
let_underscore_drop        = "warn"  # `let _ = ...` silently drops Drop types
keyword_idents_2024        = "warn"  # 2024-edition reserved keywords as idents
# Kept stricter than aozora on purpose: aozora `allow`s this for an
# aozora-lexer enum whose largest variant trips the heuristic; aozora-flavored-markdown has no
# such enum, so we keep the `warn` and `Box` large variants if one appears.
variant_size_differences   = "warn"  # large enum variants ŌĆö push to `Box`
ambiguous_negative_literals = "warn" # `-1.pow(2)` precedence traps

# `deny` so a plain `cargo build` (no `-D warnings`) also hard-fails on
# unreferenced items, keeping stale scaffolding from piling up.
dead_code = "deny"

# Warn on edition-drift so we catch idioms deprecated by the next edition early.
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.rustdoc]
# Docs are a shipped surface: all rustdoc lints are `deny` (matches aozora).
broken_intra_doc_links       = "deny"
private_intra_doc_links      = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags            = "deny"
invalid_rust_codeblocks      = "deny"
bare_urls                    = "deny"
redundant_explicit_links     = "deny"
unescaped_backticks          = "deny"

[workspace.lints.clippy]
# Opt-in to all three lint groups that mainstream Rust libraries ship with.
# `priority = -1` lets specific carve-outs below override individual lints.
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

# Specific high-value promotions ŌĆö catch bugs that routinely slip past default
# clippy. Tests are exempted from unwrap/expect/panic via clippy.toml so these
# only bite production code paths.
dbg_macro           = "warn"  # ban forgotten `dbg!` drops
todo                = "warn"  # pair with strict-code grep for issue-ref
unimplemented       = "warn"
clone_on_ref_ptr    = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc     = "warn"
missing_assert_message     = "warn"

# Hand-picked clippy::restriction lints (the full group has contradictory
# lints, so it stays off). `print_stdout` / `print_stderr` can't live here ŌĆö
# Cargo rejects mixing workspace lints with per-crate overrides
# (rust-lang/cargo#12697) ŌĆö so `just strict-code` greps for stray println!.
str_to_string                    = "warn"  # prefer `.into()` / `String::from`
absolute_paths                   = "warn"  # prefer `use`-imported names
allow_attributes_without_reason  = "warn"  # belt-and-braces against strict-code gate
empty_structs_with_brackets      = "warn"
if_then_some_else_none           = "warn"  # prefer `.then_some` / `.then`
let_underscore_must_use          = "warn"  # ignoring `#[must_use]` via `let _ =`
mixed_read_write_in_expression   = "warn"
rest_pat_in_fully_bound_structs  = "warn"
same_name_method                 = "warn"
semicolon_outside_block          = "warn"
try_err                          = "warn"  # prefer `?` over `Err(x)?`
unneeded_field_pattern           = "warn"
verbose_file_reads               = "warn"  # prefer `fs::read` / `fs::read_to_string`
format_push_string               = "warn"  # prefer `write!` / collect
unnecessary_self_imports         = "warn"
assertions_on_result_states      = "warn"  # prefer `.unwrap_err()` / explicit shape
filetype_is_file                 = "warn"
rc_buffer                        = "warn"  # `Rc<String>` ŌåÆ `Rc<str>`, etc.
rc_mutex                         = "warn"  # `Rc<Mutex<_>>` is a smell ŌĆö threaded vs refcounted mix-up
lossy_float_literal              = "warn"
suspicious_xor_used_as_pow       = "warn"  # `2 ^ 10` is 8, not 1024

# Justified carve-outs.
module_name_repetitions = "allow" # `aozora_syntax::SyntaxError` reads clearer
multiple_crate_versions = "allow" # transitive dep collisions are not our problem
missing_const_for_fn    = "allow" # zero-arg builders read clearer as fns
redundant_pub_crate     = "allow" # conflicts with rustc's `unreachable_pub` (our source of truth)

[workspace.dependencies]
aozora-flavored-markdown = { version = "0.4.0", path = "crates/aozora-flavored-markdown" }
# Test-only dev-dependency; `publish = false`. Path-only (no version) so
# `cargo publish` strips it from the published manifest ŌĆö it is never on
# crates.io. The resulting `*` path requirement is permitted by deny.toml's
# `allow-wildcard-paths` (ADR-0015).
aozora-flavored-markdown-test-support = { path = "crates/aozora-flavored-markdown-test-support" }

# Sibling ķØÆń®║µ¢ćÕ║½Ķ©śµ│Ģ parser. Depend on the umbrella `aozora` crate only, not
# its internal build-block crates, so aozora-flavored-markdown is insulated from its decomposition.
# Registry dependency (crates.io) so aozora-flavored-markdown can itself be published ŌĆö a
# git source would make `cargo publish` reject the crate (ADR-0015). v0.4.1 is
# the published cut of the former `rev = a53c632ŌĆ”` pin; an intentional sync is
# now one PR per `cargo update -p aozora` + version bump. `default-features =
# false` keeps cst / query / wire / proptest / schema out of the build graph.
aozora = { version = "0.4.1", default-features = false }

# Vendored comrak fork (path, not crates.io). `default-features = false` drops
# the comrak CLI (`cli` / `syntect` / `bon`); aozora-flavored-markdown-cli is our own binary.
comrak = { version = "0.52.0", path = "upstream/comrak", default-features = false }

# Error handling
thiserror = "2.0.18"
anyhow    = "1.0"
miette    = { version = "7.6.0", features = ["fancy"] }

# Parsing helpers
winnow                = "1.0"
unicode-segmentation  = "1.13"
regex                 = "1.12"

# Serialization / data
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding
encoding_rs = "0.8.35"

# Compile-time hash maps (gaiji UCS lookup table, kaeriten/bouten slugs)
phf = { version = "0.13", features = ["macros"] }

# Filesystem walking ŌĆö used by aozora-md-corpus to iterate test corpora
walkdir = "2.5"

# Test helpers
tempfile = "3.27"

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4.6.1", features = ["derive", "wrap_help", "env", "color", "cargo"] }
clap_complete = "4.6"
clap_mangen   = "0.2"

# Testing
proptest          = "1.11"
pretty_assertions = "1.4.1"
# Snapshot testing
insta             = "1.47"

# Benchmarking / profiling
criterion = { version = "0.8", features = ["html_reports"] }
dhat      = "0.3"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
opt-level     = 3

[profile.bench]
inherits = "release"
strip    = "none"
debug    = 1

[profile.dev]
# Faster incremental for large workspaces with a vendored tree
split-debuginfo = "unpacked"

# Optimise proc-macros/build scripts/most upstream in dev to speed the test cycle
[profile.dev.package."*"]
opt-level = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
