[package]
name        = "afm-cli"
description = "Aozora Flavored Markdown (afm): command-line interface"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
readme.workspace      = true
keywords.workspace    = true
categories.workspace  = true

[lints]
workspace = true

[[bin]]
name = "afm"
path = "src/main.rs"

[dependencies]
aozora          = { workspace = true }
afm-markdown    = { workspace = true }
clap      = { workspace = true }
miette    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
tracing-subscriber = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
