[package]
name        = "afm-corpus"
description = "Corpus source abstraction for afm parser sweep tests (dev-only, not published)"
# dev-only support crate — never published to crates.io.
publish     = false
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
walkdir   = { workspace = true }

[dev-dependencies]
insta    = { workspace = true }
tempfile = { workspace = true }
