[package]
name        = "afm-markdown"
description = "Aozora Flavored Markdown: CommonMark + GFM + Aozora Bunko notation integration over a vendored comrak fork"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[dependencies]
aozora-syntax   = { workspace = true }
aozora-pipeline = { workspace = true }
aozora-render   = { workspace = true }
aozora-spec     = { workspace = true }
aozora-encoding = { workspace = true }
comrak    = { workspace = true }
miette    = { workspace = true }
thiserror = { workspace = true }
# Used by the IR module to derive Serialize on `IrDocument`. Pulled
# in as a regular dep so downstream consumers (afm-wasm, afm-epub)
# can round-trip the IR via serde-wasm-bindgen / serde_json without
# extra adapters.
serde     = { workspace = true }

[dev-dependencies]
aozora-proptest   = { workspace = true }
proptest          = { workspace = true }
pretty_assertions = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }

[features]
default = ["html"]
# HTML renderer. Enabled by default but kept behind a feature so
# downstream tools can parse without pulling in the renderer.
html = []
