[package]
name        = "afm-parser"
description = "Aozora Flavored Markdown (afm): CommonMark + GFM + Aozora Bunko parser — reference implementation"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
readme.workspace      = true
keywords.workspace    = true
categories.workspace  = true

[lints]
workspace = true

[dependencies]
afm-syntax = { workspace = true }
afm-lexer  = { workspace = true }
comrak     = { workspace = true }
unicode-segmentation = { workspace = true }
miette               = { workspace = true }
thiserror            = { workspace = true }
tracing              = { workspace = true }

[dev-dependencies]
afm-corpus        = { workspace = true }
afm-encoding      = { workspace = true }
insta             = { workspace = true }
proptest          = { workspace = true }
pretty_assertions = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }

[features]
default = ["html"]
# HTML renderer. Enabled by default but kept behind a feature so downstream tools
# can parse without pulling in the renderer.
html = []
